<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="125dp"
        app:srcCompat="@drawable/android" />
    <EditText
        android:id="@+id/username"
        android:textColor="#ffffff"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:textColor="#ffffff"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/fpass"
        android:textColor="#ff0000"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fpass" />



    <TextView
        android:id="@+id/signup"
        android:textColor="#ffffff"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup" />

    <Button
        android:id="@+id/signin"
        android:background="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/signin" />


</LinearLayout>